--- a/src/main/resources/templates/legal/terms.html
+++ b/src/main/resources/templates/legal/terms.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Use - Wallet</title>
-    <div th:replace="~{fragments/favicon :: favicons}"></div>
-    <link rel="stylesheet" href="/css/style.css">
+    <div th:replace="~{shared/favicon :: favicons}"></div>
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -121,7 +121,9 @@
         <a href="/" class="btn btn-primary">🏠 Return to Login</a>
     </div>
 
-    <div th:replace="~{fragments/footer :: footer}"></div>
+    <div th:replace="~{shared/footer :: footer}"></div>
 </div>
+
+<script src="/js/main.js"></script>
 </body>
 </html>
